# Recursive-Improvement-Alpha

./: .env.example  .gitignore  README.md  RUN_INSTRUCTIONS.md  __siha_write__  alembic.ini  check_git.py  debug_regex.py  do_git.py  fix_queries.py  hello.html  pyproject.toml  test_cmd.py
alembic/: env.py
alembic/versions/: 664d50922605_add_mutation_target_name.py  841b8d816121_add_mutation_lifecycle_and_version_.py  9778bcea0cd6_initial_schema.py  a1f2e3d4c5b6_add_action_templates.py  b7c8d9e0f1a2_add_template_trust_and_task_triage.py  bdfabafa9f67_add_task_category_and_trace_id.py  c08fb9266eb4_remove_tool_name_unique_constraint.py  e3a4b5c6d7e8_rename_toolstatus_deprecated_to_archived.py
portal-web/: index.html  package-lock.json  package.json
portal-web/src/: App.tsx  AuthContext.tsx  api.ts  types.ts
portal-web/src/pages/: Benchmarks.tsx  HarnessState.tsx  Health.tsx  Login.tsx  Mutations.tsx  Sessions.tsx  Tools.tsx  Versions.tsx
src/siha/: __init__.py  cli.py  cli_commands.py  cli_display.py  config.py  db.py  logging.py  models.py  schemas.py
src/siha/agent/: __init__.py  action_mapper.py  loop.py  planner.py  prompts.py  router.py  scaffolds.py  session.py  workspace_index.py
src/siha/benchmarks/: __init__.py  (+2 more)
tests/: __init__.py  conftest.py  test_action_templates.py  test_benchmarks.py  test_db.py  test_dynamic_tools.py  test_evaluation.py  test_failure_learning_and_trust.py  test_mutation_lifecycle.py  test_portal.py  test_safety_and_grammar.py  test_sandbox.py  test_scaffolds_and_index.py  test_search.py  test_tools.py  test_triage.py
(+38 files in other folders)
