[project]
name = "siha"
version = "0.1.0"
description = "9xf-code: Self-Improving CLI Coding Agent with Developer Portal"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "httpx>=0.25.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "sqlmodel>=0.0.14",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sse-starlette>=1.6.0",
]

[project.optional-dependencies]
local = [
    "llama-cpp-python>=0.3.0",
    "huggingface-hub>=0.20.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
siha = "siha.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
